WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
279419
SHOULD NEVER BE REACHED in WebCore::RenderBox::containingBlockLogicalWidthForContent() const
https://bugs.webkit.org/show_bug.cgi?id=279419
Summary
SHOULD NEVER BE REACHED in WebCore::RenderBox::containingBlockLogicalWidthFor...
Fujii Hironori
Reported
2024-09-09 23:06:00 PDT
Regressions: Unexpected crashes (1) imported/w3c/web-platform-tests/css/css-transforms/transform-box/cssbox-content-box-002.html [ Crash ] SHOULD NEVER BE REACHED C:\webkit\wc\Source\WebCore\rendering/RenderBox.cpp(2282) : virtual LayoutUnit WebCore::RenderBox::containingBlockLogicalWidthForContent() const 1 00007FFDF2B43C4E WebCore::RenderBox::containingBlockLogicalWidthForContent 2 00007FFDF0D9205D WebCore::RenderBoxModelObject::resolveLengthPercentageUsingContainerLogicalWidth 3 00007FFDF0D91F44 WebCore::RenderBoxModelObject::computedCSSPaddingLeft 4 00007FFDF1C2929B WebCore::RenderBoxModelObject::padding 5 00007FFDF190A644 WebCore::RenderBox::contentBoxRect 6 00007FFDF2B3B06A WebCore::RenderBox::referenceBoxRect 7 00007FFDF0D892C1 WebCore::RenderElement::transformReferenceBoxRect 8 00007FFDF2C4A54D WebCore::RenderLayer::updateTransformFromStyle 9 00007FFDF2C4A716 WebCore::RenderLayer::updateTransform 10 00007FFDF2C62AE5 WebCore::RenderLayer::styleChanged 11 00007FFDF2CB945C WebCore::RenderLayerModelObject::styleDidChange 12 00007FFDF2B01F9A WebCore::RenderBox::styleDidChange 13 00007FFDF2B01E7A WebCore::RenderBlock::styleDidChange 14 00007FFDF2B2C5D5 WebCore::RenderBlockFlow::styleDidChange 15 00007FFDF2BBEC5F WebCore::RenderElement::initializeStyle 16 00007FFDF2FCC1B5 WebCore::RenderTreeUpdater::createRenderer 17 00007FFDF2FC9A87 WebCore::RenderTreeUpdater::updateElementRenderer 18 00007FFDF2FC8D95 WebCore::RenderTreeUpdater::updateRenderTree 19 00007FFDF2FC85B1 WebCore::RenderTreeUpdater::commit 20 00007FFDF138F729 WebCore::Document::updateRenderTree 21 00007FFDF138FFFD WebCore::Document::resolveStyle 22 00007FFDF13907D5 WebCore::Document::updateStyleIfNeeded 23 00007FFDF13AD745 WebCore::Document::finishedParsing 24 00007FFDF1B97D89 WebCore::HTMLConstructionSite::finishedParsing 25 00007FFDF1BFBF96 WebCore::HTMLTreeBuilder::finished 26 00007FFDF1B9E5EF WebCore::HTMLDocumentParser::end 27 00007FFDF1B9CCA2 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd 28 00007FFDF1B9C9B5 WebCore::HTMLDocumentParser::prepareToStopParsing 29 00007FFDF1B9E640 WebCore::HTMLDocumentParser::attemptToEnd 30 00007FFDF1B9E692 WebCore::HTMLDocumentParser::finish 31 00007FFDF2051D8D WebCore::DocumentWriter::end
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-09-09 23:07:31 PDT
History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-transforms%2Ftransform-box%2Fcssbox-content-box-002.html
Fujii Hironori
Comment 2
2024-09-09 23:11:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33376
EWS
Comment 3
2024-09-09 23:14:04 PDT
Test gardening commit
283396@main
(a5bbe7839824): <
https://commits.webkit.org/283396@main
> Reviewed commits have been landed. Closing PR #33376 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-09-16 23:06:31 PDT
<
rdar://problem/136126924
>
zsun
Comment 5
2024-10-14 07:29:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35150
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug