Call RenderLayer::updateTransform() only when box size is available.

https://bugs.webkit.org/show_bug.cgi?id=279419

Reviewed by NOBODY (OOPS!).

Add condition check before calling RenderLayer::updateTransform(),
which requires box size being available.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setSnapshottedScrollOffsetForAnchorPositioning):
(WebCore::RenderLayer::clearSnapshottedScrollOffsetForAnchorPositioning):
(WebCore::RenderLayer::calculateClipRects const):