Source/WebCore/rendering/RenderLayer.cpp
@@ -4483,7 +4483,8 @@ void RenderLayer::setSnapshottedScrollOffsetForAnchorPositioning(LayoutSize offs
 
     // FIXME: Scroll offset should be adjusted in the scrolling tree so layers stay exactly in sync.
     m_snapshottedScrollOffsetForAnchorPositioning = offset;
-    updateTransform();
+    if (renderer().containingBlock())
+        updateTransform();
 }
 
 void RenderLayer::clearSnapshottedScrollOffsetForAnchorPositioning()
@@ -4492,7 +4493,8 @@ void RenderLayer::clearSnapshottedScrollOffsetForAnchorPositioning()
         return;
 
     m_snapshottedScrollOffsetForAnchorPositioning = { };
-    updateTransform();
+    if (renderer().containingBlock())
+        updateTransform();
 }
 
 // hitTestLocation and hitTestRect are relative to rootLayer.
@@ -5934,7 +5936,8 @@ void RenderLayer::styleChanged(StyleDifference diff, const RenderStyle* oldStyle
         m_scrollableArea->updateAllScrollbarRelatedStyle();
 
     updateDescendantDependentFlags();
-    updateTransform();
+    if (renderer().containingBlock())
+        updateTransform();
     updateBlendMode();
     updateFiltersAfterStyleChange(diff, oldStyle);
     clearClipRects();
